Version 3.5.x (2012-xx-xx)
	Changed so the theme_advanced_buttons doesn't have a default set if one button row is specified.
	Changed the theme_advanced_toolbar_align default value to "left".
	Changed the theme_advanced_toolbar_location default value to "top".
	Changed the theme_advanced_statusbar_location default value to "bottom".
Version 3.5.1.1 (2012-05-25)
	Fixed bug with control creation where plugin specific controls didn't work as expected.
Version 3.5.1 (2012-05-25)
	Added new onBeforeAdd event to UndoManager patch contributed by Dan Rumney.
	Added support for overriding the theme rendering logic by using a custom function.
	Fixed bug where links wasn't automatically created by the autolink plugin on old IE versions when pressing enter in BR mode.
	Fixed bug where enter on older IE versions wouldn't produce a new paragraph if the previous sibling paragraph was empty.
	Fixed bug where toString on a faked DOM range on older IE versions wouldn't return a proper string.
	Fixed bug where named anchors wouldn't work properly when schema was set to HTML5.
	Fixed bug where HTML5 datalist options wasn't correctly parsed or indented.
	Fixed bug where linking would add anchors around block elements when the HTML5 schema was used.
	Fixed issue where the autolink plugin wouldn't properly handle mailto:user@domain.com.
	Optimized initialization and reduced rendering flicker by hiding the target element while initializing.
Version 3.5.0.1 (2012-05-10)
	Fixed bug where selection normalization logic would break the selections of parent elements using the element path.
	Fixed bug where the autolink plugin would include trailing dots in domain names in the link creation.
	Fixed bug where the autolink plugin would produce an error on older IE versions when pressing enter.
	Fixed bug where old IE versions would throw an error during initialization when the editor was placed in an size restricted div.
Version 3.5 (2012-05-03)