@@ -1,4 +1,5 @@
 Version 3.5.x (2012-xx-xx)
+	Changed the default theme to be advanced instead of simple since most users uses the advanced theme.
 	Changed so the theme_advanced_buttons doesn't have a default set if one button row is specified.
 	Changed the theme_advanced_toolbar_align default value to "left".
 	Changed the theme_advanced_toolbar_location default value to "top".
